The structure of the project has been modified to become a maven project. RNArtist can now be easily installed by typing: mvn clean package.