@@ -3,4 +3,4 @@
 JAVA_HOME="/Library/Java/JavaVirtualMachines/jdk-14.jdk/Contents/Home"
 
 cd "`dirname "$0"`"
-$JAVA_HOME/java -Xms500M -Xmx500M -jar lib/rnartist.jar
+$JAVA_HOME/bin/java -Xms500M -Xmx500M --module-path lib --add-modules=javafx.controls,javafx.swing,javafx.web --add-exports javafx.graphics/com.sun.javafx.css=ALL-UNNAMED --add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED -jar lib/rnartist-1.0.jar
